remove o paragrafo antigo referente a fase 2

--- a/f299-template-pi-paper/Topicos/metodologia.tex
+++ b/f299-template-pi-paper/Topicos/metodologia.tex
@@ -33,9 +33,7 @@ objetivo é avaliar a capacidade de manter a atenção em um ponto fixo durante 
     \SourceOrNote{Autoria Própria (2025)}
 \end{figure}
 
-Na segunda fase, são apresentadas cinco estrelas estáticas que brilham individualmente em sequência. Simultaneamente, três planetas transitam pela tela, atuando como estímulos secundários que o participante deve reconhecer. Ao término desta fase, o usuário responde a um formulário utilizando botões \textit{IoT}, cada um correspondente a um planeta específico. O objetivo é que o participante aperte o botão do planeta X se, e somente se, o tiver observado em trânsito. Essa etapa visa mensurar a capacidade de identificar alvos dinâmicos (os planetas) enquanto o participante mantém o foco em estímulos estáticos (as estrelas). A trilha sonora, que se torna mais intensa e acelerada, tem o propósito de aumentar o nível de exigência atencional e avaliar a concentração diante de múltiplos estímulos visuais e auditivos.
-
-Na segunda fase do experimento, o participante é instruído a concentrar sua atenção nas cinco estrelas estáticas exibidas na tela, que brilham de forma sequencial. Durante essa tarefa, três planetas em movimento atravessam o campo visual, atuando como distratores não mencionados nas instruções. Ao término da exibição, o participante deve indicar, por meio de botões IoT, quais planetas conseguiu perceber durante a execução da tarefa principal.
+Na segunda fase do experimento, o participante é instruído a concentrar sua atenção nas cinco estrelas estáticas exibidas na tela, que brilham de forma sequencial. Durante essa tarefa, três planetas em movimento atravessam o campo visual, atuando como distratores não mencionados nas instruções. Ao término da exibição, o participante deve indicar, por meio de botões \textit{IoT}, quais planetas conseguiu perceber durante a execução da tarefa principal.
 A expectativa é que indivíduos com maior capacidade de atenção mantenham o foco na tarefa principal, ao passo que aqueles com dificuldades atencionais tendam a desviar o olhar e identificar os distratores. Essa dinâmica permite avaliar a suscetibilidade à distração de maneira implícita e próxima das situações reais de dispersão cognitiva.
 A trilha sonora, que se torna gradualmente mais intensa e acelerada, amplia a carga cognitiva e permite observar como múltiplos estímulos simultâneos afetam a manutenção da atenção.
 
