detalha explicação do webgazer

--- a/f299-template-pi-paper/fatec-article.bib
+++ b/f299-template-pi-paper/fatec-article.bib
@@ -263,7 +263,6 @@
   day       = {9},
   url       = {https://webgazer.cs.brown.edu/}
 }
-```
 
 @InCollection{sep-chinese-room,
 	author       =	{Cole, David},
@@ -274,4 +273,12 @@
 	year         =	{2024},
 	edition      =	{{W}inter 2024},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@misc{WebGazerDoc,
+  author = {{Brown HCI Group}},
+  title  = {WebGazer.js: 3.2 Gaze Prediction},
+  note   = {Documentação Wiki},
+  url    = {https://deepwiki.com/brownhci/WebGazer/3.2-gaze-prediction},
+  year   = {2024}, % Usando o ano atual como referência, visto que é uma documentação viva.
 }
